--- a/hw1/index.html
+++ b/hw1/index.html
@@ -85,7 +85,31 @@
 
 <h3 align="middle">Part 6: "Level sampling" with mipmaps for texture mapping</h3>
 
-
+<div align="middle">
+	<table style="width=100%">
+	  <tr>
+		<td>
+		  <img src="./images/task6_zero_near.png" align="middle" width="800px"/>
+		  <figcaption align="middle">Caption goes here.</figcaption>
+		</td>
+		<td>
+		  <img src="./images/task6_near_near.png" align="middle" width="800px"/>
+		  <figcaption align="middle">Caption goes here.</figcaption>
+		</td>
+	  </tr>
+	  <br>
+	  <tr>
+		<td>
+		  <img src="./images/task6_nearest_bilin.png" align="middle" width="800px"/>
+		  <figcaption align="middle">Caption goes here.</figcaption>
+		</td>
+		<td>
+		  <img src="./images/task6_bilin_bilin.png" align="middle" width="800px"/>
+		  <figcaption align="middle">Caption goes here.</figcaption>
+		</td>
+	  </tr>
+	</table>
+  </div>
 
 <h2 align="middle">Section III: Art Competition</h2>
 <p>If you are not participating in the optional art competition, don't worry about this section!</p>
