--- a/hw1/index.html
+++ b/hw1/index.html
@@ -85,15 +85,17 @@
 
 <h3 align="middle">Part 6: "Level sampling" with mipmaps for texture mapping</h3>
 
+<p> If this text here shows up, that means the images should also load. Hopefully uhh. This all just works yk</p>
+
 <div align="middle">
 	<table style="width=100%">
 	  <tr>
 		<td>
-		  <img src="./images/task6_zero_near.png" align="middle" width="800px"/>
+		  <img src="./images/task6_zero_near.png" align="middle" width="400px"/>
 		  <figcaption align="middle">Caption goes here.</figcaption>
 		</td>
 		<td>
-		  <img src="./images/task6_near_near.png" align="middle" width="800px"/>
+		  <img src="./images/task6_near_near.png" align="middle" width="400px"/>
 		  <figcaption align="middle">Caption goes here.</figcaption>
 		</td>
 	  </tr>
