--- a/hw1/index.html
+++ b/hw1/index.html
@@ -114,7 +114,7 @@
   </div>
 
 <h2 align="middle">Section III: Art Competition</h2>
-<p>If you are not participating in the optional art competition, don't worry about this section!</p>
+<p>HELP I"M TRAPPED MAKING WEBSITESSS!!! AHHHHHHH If you are not participating in the optional art competition, don't worry about this section!</p>
 
 <h3 align="middle">Part 7: Draw something interesting!</h3>
 
