please god just do something

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -39,7 +39,7 @@
 <h3 align="middle">Part 1: Rasterizing single-color triangles</h3>
 
 <p>Here is an example 2x2 gridlike structure using an HTML table. Each <b>tr</b> is a row and each <b>td</b> is a column in that row. You might find this useful for framing and showing your result images in an organized fashion.</p>
-
+<p>Please for the love of god just let this show up. Pleeeafhjfnerjkregnrggren vr</p>
 <div align="middle">
   <table style="width=100%">
     <tr>
