--- a/hw1/index.html
+++ b/hw1/index.html
@@ -83,17 +83,17 @@
 <div class="img-container">
 	<img src="./images/task3_pastydancer.png" align="middle" width="400px"/>
 	<figcaption align="middle">PASTY DANCER TM</figcaption>
-
   </div>
 
 <p>My goal here was to move the arms of the cubeman in order to make it look like he was dancing. I did this by bending the legs outwards, through rotation. I then reveresed the rotation for the bottom half of the legs, in order to make the illusion of bent knees. I did something similar for the left arm, with a different degree of rotation. I kept the right arm straight because it felt more dance-y, and I also kept the head rotated, to make him seem a bit more dramatic. </p>
 
 
+<div align="middle">
 
+	<h2 align="middle">Section II: Sampling</h2>
+	<h3 align="middle">Part 4: Barycentric coordinates</h3>
 
-<h2 align="middle">Section II: Sampling</h2>
-
-<h3 align="middle">Part 4: Barycentric coordinates</h3>
+  </div>
 
 <div class="img-container">
 	<img src="./images/task1_triangles.png" align="middle" width="400px"/>
