--- a/hw1/index.html
+++ b/hw1/index.html
@@ -85,19 +85,28 @@
 	<figcaption align="middle">PASTY DANCER TM</figcaption>
   </div>
 
-<p>My goal here was to move the arms of the cubeman in order to make it look like he was dancing. I did this by bending the legs outwards, through rotation. I then reveresed the rotation for the bottom half of the legs, in order to make the illusion of bent knees. I did something similar for the left arm, with a different degree of rotation. I kept the right arm straight because it felt more dance-y, and I also kept the head rotated, to make him seem a bit more dramatic. </p>
+<p>My goal here was to move the arms of the cubeman in order to make it look like he was dancing. 
+	I did this by bending the legs outwards, through rotation. 
+	I then reveresed the rotation for the bottom half of the legs, 
+	in order to make the illusion of bent knees. 
+	I did something similar for the left arm, with a different degree of rotation. 
+	I kept the right arm straight because it felt more dance-y, and I also kept the head rotated, 
+	to make him seem a bit more dramatic. All of this is ultimately accomplished with rotations, 
+	and it's worth noting that the rotations for lower limbs had to take into account the rotations for the upper parts of limbs, 
+	because of how transformations cascade. 
+</p>
 
+<br>
+<br>
+<br>
 
-<div align="middle">
+<h2 align="middle">Section II: Sampling</h2>
+<h3 align="middle">Part 4: Barycentric coordinates</h3>
 
-	<h2 align="middle">Section II: Sampling</h2>
-	<h3 align="middle">Part 4: Barycentric coordinates</h3>
-
-  </div>
 
 <div class="img-container">
-	<img src="./images/task1_triangles.png" align="middle" width="400px"/>
-	<figcaption align="middle">PLACEHOLDER IMAGE, GRAPHIC MUST BE ADDED</figcaption>
+	<img src="./images/barycentric.png" align="middle" width="400px"/>
+	<figcaption align="middle">Proportional Distances to Each Vertex</figcaption>
 
   </div>
 
@@ -110,7 +119,7 @@
 	  <tr>
 		<td>
 		  <img src="./images/task4_colorwheel.png" align="middle" width="400px"/>
-		  <figcaption align="middle">THIS THE COLOR WHEEL BABYYY</figcaption>
+		  <figcaption align="middle">Barycentric Interpolation for a Color Wheel</figcaption>
 		</td>
 	  </tr>
 	</table>
@@ -171,8 +180,8 @@
 		  <figcaption align="middle">L_NEAREST, P_BILINEAR</figcaption>
 		</td>
 		<td>
-		  <img src="./images/task6_bilin_bilin.png" align="middle" width="400px"/>
-		  <figcaption align="middle">L_BILINEAR, P_BILINEAR</figcaption>
+		  <img src="./images/task6_zero_bilin.png" align="middle" width="400px"/>
+		  <figcaption align="middle">L_ZERO, P_BILINEAR</figcaption>
 		</td>
 	  </tr>
 	</table>
