--- a/hw1/index.html
+++ b/hw1/index.html
@@ -96,11 +96,23 @@
 	and jaggies. At a slight distance, the supersampled triangles look 
 	significantly better. 
 </p>
+
+<div style="text-align: center;">
+    <img src="./images/task2_sr1.png" width="400px"/>
+    <figcaption>SAMPLE_RATE=1</figcaption>
+    
+    <img src="./images/task2_sr4.png" width="400px"/>
+    <figcaption>SAMPLE_RATE=4</figcaption>
+    
+    <img src="./images/task2_sr16.png" width="400px"/>
+    <figcaption>SAMPLE_RATE=16</figcaption>
+</div>
+<!--
 <div align="middle">
 	<table style="width=100%">
 	  <tr>
 		<td>
-		  <img src="./images/task2_sr1.png" align="left" width="400px"/>
+		  <img src="./images/task2_sr1.png" align="middle" width="400px"/>
 		  <figcaption align="middle">SAMPLE_RATE=1</figcaption>
 		</td>
 		<td>
@@ -108,13 +120,13 @@
 			<figcaption align="middle">SAMPLE_RATE=4</figcaption>
 		</td>
 		<td>
-			<img src="./images/task2_sr16.png" align="right" width="400px"/>
+			<img src="./images/task2_sr16.png" align="middle" width="400px"/>
 			<figcaption align="middle">SAMPLE_RATE=16</figcaption>
 		</td>
 	  </tr>
 	</table>
   </div>
-
+-->
 <h3 align="middle">Part 3: Transforms</h3>
 
 <div class="img-container">
@@ -133,6 +145,9 @@
 	because of how transformations cascade. 
 </p>
 
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
