MORE ALIGNMENTgit statusgit statusgit status

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -97,6 +97,25 @@
 	significantly better. 
 </p>
 
+<div style="display: flex; justify-content: center;">
+    <div style="display: flex;">
+        <div style="margin-right: 20px;">
+            <img src="./images/task2_sr1.png" width="400px"/>
+            <figcaption>SAMPLE_RATE=1</figcaption>
+        </div>
+        
+        <div style="margin-right: 20px;">
+            <img src="./images/task2_sr4.png" width="400px"/>
+            <figcaption>SAMPLE_RATE=4</figcaption>
+        </div>
+        
+        <div>
+            <img src="./images/task2_sr16.png" width="400px"/>
+            <figcaption>SAMPLE_RATE=16</figcaption>
+        </div>
+    </div>
+</div>
+<!--
 <div style="text-align: center;">
     <div style="display: inline-block;">
         <img src="./images/task2_sr1.png" width="400px"/>
@@ -113,7 +132,7 @@
         <figcaption>SAMPLE_RATE=16</figcaption>
     </div>
 </div>
-<!--
+
 <div style="text-align: center;">
     <img src="./images/task2_sr1.png" width="400px"/>
     <figcaption>SAMPLE_RATE=1</figcaption>
