--- a/hw1/index.html
+++ b/hw1/index.html
@@ -94,7 +94,7 @@
 	makes some pixels around the edge of the triangle a lighter color. 
 	This allows the triangle to fade into view, removing the hard edges 
 	and jaggies. At a slight distance, the supersampled triangles look 
-	significantly better. 
+	significantly better. CHANGES SHOULD SHOW UP!! 
 </p>
 
 <div style="display: flex; justify-content: center;">
